--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "spryker/oms": "^6.0.0 || ^7.0.0",
     "spryker/payment": "^3.0.0 || ^4.0.0",
     "spryker/propel-orm": "^1.0.0",
+    "spryker/refund": "^4.0.0 || ^5.0.0",
     "spryker/sales": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "spryker/session": "^3.0.0",
     "spryker/step-engine": "^2.0.0 || ^3.0.0",
@@ -22,18 +23,16 @@
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
-    "spryker/country": "*",
-    "spryker/customer": "*",
     "spryker/propel": "*",
     "spryker/silex": "*",
     "spryker/testify": "*"
   },
-  "suggest": {
-    "spryker/sales": "If you want to use Oms command plugins."
+  "replace": {
+    "spryker/payolution": "*"
   },
   "autoload": {
     "psr-0": {
-      "Spryker": "src/",
+      "SprykerEco": "src/",
       "Function": "tests/"
     }
   },
