--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "spryker/refund": "^4.0.0 || ^5.0.0",
     "spryker/sales": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "spryker/session": "^3.0.0",
-    "spryker/step-engine": "^2.0.0 || ^3.0.0",
+    "spryker/step-engine": "^3.1.0",
     "spryker/symfony": "^3.0.0",
     "spryker/util-text": "^1.1.0",
     "spryker/zed-request": "^3.0.0"
@@ -46,7 +46,7 @@
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
-      "dev-master": "3.0.x-dev"
+      "dev-master": "4.0.x-dev"
     }
   },
   "config": {
