--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,11 @@
   },
   "autoload-dev": {
     "psr-0": {
-      "Functional": "tests/",
-      "Unit": "tests/"
+      "Unit": "vendor/spryker-eco/payolution/tests",
+      "Functional": "vendor/spryker-eco/payolution/tests"
+    },
+    "psr-4": {
+      "SprykerTest\\": "tests/SprykerTest/"
     }
   },
   "minimum-stability": "dev",
