--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -105,6 +105,7 @@ build:
             - sed -i -e 's/"Spryker"\:/""\:/g' composer.json
             - composer config repositories.spryker composer https://code.spryker.com/repo/private
             - composer require --dev spryker/console
+            - composer require --dev spryker/transfer
             - APPLICATION_STORE=DE APPLICATION_ENV=development vendor/bin/console transfer:generate
     environment:
         php:
