--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "spryker/session": "^3.0.0",
     "spryker/step-engine": "^3.1.0",
     "spryker/symfony": "^3.0.0",
+    "spryker/transfer": "^3.4",
     "spryker/util-text": "^1.1.0",
     "spryker/zed-request": "^3.0.0"
   },
