--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,7 @@ build:
     dependencies:
         before:
             - composer config repositories.spryker composer https://code.spryker.com/repo/private
+            - composer update
     environment:
         php:
             version: 7.1
