ECO-838 Scrutinizer CI configuration
- Override dependencies

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,10 +1,11 @@
 build:
     dependencies:
-        before:
-            - composer config repositories.spryker composer https://code.spryker.com/repo/private
-    environment:
-        php:
-            version: 7.1
+        override:
+            - true
+
+environment:
+    php:
+        version: 7.1
 
 checks:
     php:
