ECO-838 Scrutinizer CI configuration
- Config with scripts (again)

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -104,6 +104,9 @@ build:
                   }" > src/Pyz/Zed/Console/ConsoleDependencyProvider.php
             - sed -i -e 's/"Spryker"\:/""\:/g' composer.json
             - composer config repositories.spryker composer https://code.spryker.com/repo/private
+            - composer require --dev spryker/transfer
+            - composer require --dev spryker/console
+            - APPLICATION_STORE=DE APPLICATION_ENV=development vendor/bin/console transfer:generate
 
 environment:
     php:
