--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -102,7 +102,7 @@ build:
                       }
 
                   }" > src/Pyz/Zed/Console/ConsoleDependencyProvider.php
-            - sed -i -e 's/"Spryker"\:/""\:/g' composer.json
+            - sed -i -e 's/"SprykerEco"\:/""\:/g' composer.json
             - composer config repositories.spryker composer https://code.spryker.com/repo/private
             - composer require --dev spryker/transfer
             - composer require --dev spryker/console
