ECO-838 Scrutinizer CI configuration
- Config from `econda`

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,132 +1,18 @@
 build:
-    dependencies:
-        before:
-            - mkdir -p config/Shared
-            - >
-              echo "<?php
-
-                \$stores = [];
-
-                \$stores['DE'] = [
-                    // different contexts
-                    'contexts' => [
-                        // shared settings for all contexts
-                        '*' => [
-                            'timezone' => 'Europe/Berlin',
-                            'dateFormat' => [
-                                // short date (01.02.12)
-                                'short' => 'd/m/Y',
-                                // medium Date (01. Feb 2012)
-                                'medium' => 'd. M Y',
-                                // date formatted as described in RFC 2822
-                                'rfc' => 'r',
-                                'datetime' => 'Y-m-d H:i:s',
-                            ],
-                        ],
-                        // settings for contexts (overwrite shared)
-                        'yves' => [],
-                        'zed' => [
-                            'dateFormat' => [
-                                // short date (2012-12-28)
-                                'short' => 'Y-m-d',
-                            ],
-                        ],
-                    ],
-                    'locales' => [
-                        // first entry is default
-                        'en' => 'en_US',
-                    ],
-                    // first entry is default
-                    'countries' => ['DE', ],
-                    // internal and shop
-                    'currencyIsoCode' => 'EUR',
-                ];
-
-                return \$stores;" > config/Shared/stores.php
-            - >
-               echo "<?php
-
-                     use Spryker\Shared\ErrorHandler\ErrorHandlerConstants;
-                     use Spryker\Shared\Kernel\KernelConstants;
-                     use Spryker\Shared\Propel\PropelConstants;
-
-                     \$config[KernelConstants::SPRYKER_ROOT] = APPLICATION_ROOT_DIR . '/vendor/spryker';
-                     \$config[ErrorHandlerConstants::ERROR_LEVEL] = E_ALL & ~E_DEPRECATED & ~E_USER_DEPRECATED;
-                     \$config[KernelConstants::PROJECT_NAMESPACE] = 'Pyz';
-                     \$config[KernelConstants::PROJECT_NAMESPACES] = [
-                         'Pyz',
-                     ];
-                     \$config[KernelConstants::CORE_NAMESPACES] = [
-                         'SprykerEco',
-                         'Spryker',
-                     ];
-
-                     \$config[PropelConstants::ZED_DB_ENGINE] = '';
-                     \$config[PropelConstants::ZED_DB_USERNAME] = '';
-                     \$config[PropelConstants::ZED_DB_PASSWORD] = '';
-                     \$config[PropelConstants::PROPEL] = [
-                         'database' => [
-                             'connections' =>  [
-                                 'default' => [
-                                     'dsn' => 'dsn',
-                                 ],
-                             ],
-                         ],
-                     ];
-                 "  > config/Shared/config_default.php
-            - mkdir -p src/Pyz/Zed/Console
-            - >
-              echo "<?php
-
-                  namespace Pyz\Zed\Console;
-
-                  use Spryker\Zed\Console\ConsoleDependencyProvider as SprykerConsoleDependencyProvider;
-                  use Spryker\Zed\Kernel\Container;
-                  use Spryker\Zed\Transfer\Communication\Console\GeneratorConsole;
-
-                  class ConsoleDependencyProvider extends SprykerConsoleDependencyProvider
-                  {
-
-                      /**
-                       * @param \Spryker\Zed\Kernel\Container \$container
-                       *
-                       * @return \Symfony\Component\Console\Command\Command[]
-                       */
-                      public function getConsoleCommands(Container \$container)
-                      {
-                          \$commands = parent::getConsoleCommands(\$container);
-
-                          \$commands[] = new GeneratorConsole();
-
-                          return \$commands;
-                      }
-
-                      /**
-                       * @param \Spryker\Zed\Kernel\Container \$container
-                       *
-                       * @return \Symfony\Component\EventDispatcher\EventSubscriberInterface[]
-                       */
-                      protected function getEventSubscriber(Container \$container)
-                      {
-                          return [];
-                      }
-
-                  }" > src/Pyz/Zed/Console/ConsoleDependencyProvider.php
-            - sed -i -e 's/"SprykerEco\\"\:/""\:/g' composer.json
-            - composer config repositories.spryker git git@github.com:spryker/spryker.git
-            - composer config repositories.spryker-private composer https://code.spryker.com/repo/private
-            - composer require --dev spryker/transfer spryker/console
-    environment:
-        php:
-            version: 7.1
-
-checks:
+  dependencies:
+    override:
+      - true
+  environment:
     php:
-        code_rating: true
-
+      version: 7.1
 filter:
-    excluded_paths:
-        - config/*
-        - tests/*
-        - src/Generated/*
-        - src/Pyz/*
+  excluded_paths:
+    - build/*
+    - tests/*
+    - vendor/*
+    - config/Shared/*
+    - src/Generated/*
+    - src/Pyz/*
+checks:
+  php:
+    code_rating: true
