--- a/codeception.yml
+++ b/codeception.yml
@@ -1,8 +1,8 @@
-namespace: SprykerTest
+namespace: Payolution
 
 include:
-    - tests/SprykerTest/Yves/Payolution
-    - tests/SprykerTest/Zed/Payolution
+    - tests/SprykerEcoTest/Yves/Payolution
+    - tests/SprykerEcoTest/Zed/Payolution
 
 paths:
     tests: tests
