--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     "spryker/kernel": "^3.0.0",
     "spryker/mail": "^4.0.0",
     "spryker/money": "^2.0.0",
-    "spryker/oms": "^6.0.0 || ^7.0.0",
-    "spryker/payment": "^3.0.0 || ^4.0.0",
+    "spryker/oms": "^7.0.0",
+    "spryker/payment": "^4.0.0",
     "spryker/propel-orm": "^1.0.0",
-    "spryker/refund": "^4.0.0 || ^5.0.0",
-    "spryker/sales": "^6.0.0 || ^7.0.0 || ^8.0.0",
+    "spryker/refund": "^5.0.0",
+    "spryker/sales": "^8.0.0",
     "spryker/session": "^3.0.0",
     "spryker/step-engine": "^3.1.0",
     "spryker/symfony": "^3.0.0",
@@ -33,13 +33,12 @@
   },
   "autoload": {
     "psr-0": {
-      "SprykerEco": "src/",
-      "SprykerTest": "tests/"
+      "SprykerEco": "src/"
     }
   },
   "autoload-dev": {
-    "psr-4": {
-      "SprykerTest\\": "vendor/spryker-eco/payolution/tests/SprykerTest/"
+    "psr-0": {
+      "SprykerEcoTest": "tests/"
     }
   },
   "minimum-stability": "dev",
