--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ install:
   - if [[ *$TRAVIS_EVENT_TYPE* = 'cron' ]]; then git checkout $(git tag | tail -n 1); fi
   - mkdir $MODULE_DIR && ls -1 | grep -v ^$MODULE_DIR | xargs -I{} mv {} $MODULE_DIR
   - echo "Cloning Demo Shop..."
-  - git clone https://github.com/spryker/demoshop.git $SHOP_DIR
+  - git clone --depth 1 https://github.com/spryker/demoshop.git $SHOP_DIR
   - cd $SHOP_DIR/
   - git checkout feature/no-payolution-payment
   - composer self-update && composer --version
