ECO-837 Eco CI plan
- Tweak travis configuration and scripts again

--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,9 @@
     "spryker/payolution": "*"
   },
   "autoload": {
-    "psr-4": {
-      "SprykerEco\\": "src/SprykerEco/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "SprykerEcoTest\\": "tests/SprykerEcoTest/"
+    "psr-0": {
+      "SprykerEco": "src/",
+      "SprykerEcoTest": "tests/"
     }
   },
   "minimum-stability": "dev",
