--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ install:
   - echo "Cloning Demo Shop..."
   - git clone https://github.com/spryker/demoshop.git $SHOP_DIR
   - cd $SHOP_DIR
+  - git checkout feature/no-payolution-payment
   - composer self-update && composer --version
   - composer install --no-interaction
   - mkdir -p data/DE/logs
