--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@
 /node_modules/
 /tests/_log/*
 !/tests/_log/.gitkeep
+
+/tests/*/Yves/*/_support/_generated/*
+/tests/*/Zed/*/_support/_generated/*
