ECO-837 Eco CI plan
- Add PHP version restriction
- Add "psr-0" for checking compatibility issues

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
     }
   },
   "autoload-dev": {
+    "psr-0": {
+      "SprykerEcoTest": "tests"
+    },
     "psr-4": {
       "SprykerEcoTest\\": "tests/SprykerEcoTest/"
     }
