--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: php
 
-php:
-  - 7.1
-
 notifications:
   email: false
 
@@ -11,7 +8,7 @@ sudo: required
 matrix:
   fast_finish: true
   include:
-     - php: "7.0"
+     - php: 7.1
 
 services:
   - postgresql
