--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ sudo: required
 matrix:
   fast_finish: true
   include:
-     - php: 7.1
+    - php: 7.1
 
 services:
   - postgresql
@@ -42,6 +42,6 @@ before_install:
   - echo "extension = redis.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 
 script:
-  - git clone -b '0.1.0' --single-branch https://github.com/spryker-eco/eco-ci.git ecoci
+  - git clone -b 0.2.1 https://github.com/spryker-eco/eco-ci.git ecoci
   - ./ecoci/build/travis.sh
 
