--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
 services:
   - postgresql
   - redis
+  - rabbitmq
 
 addons:
   postgresql: 9.4
@@ -31,7 +32,7 @@ env:
     - APPLICATION_STORE=DE
     - MODULE_DIR=module
     - SHOP_DIR=current
-    - MODULE_NAME=payolution
+    - MODULE_NAME=payone
 
 cache:
   directories:
@@ -44,4 +45,3 @@ before_install:
 script:
   - git clone -b 0.2.1 https://github.com/spryker-eco/eco-ci.git ecoci
   - ./ecoci/build/travis.sh
-
