--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ env:
     - APPLICATION_STORE=DE
     - MODULE_DIR=module
     - SHOP_DIR=current
-    - MODULE_NAME=payone
+    - MODULE_NAME=payolution
 
 cache:
   directories:
