--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     "spryker/kernel": "^3.0.0",
     "spryker/mail": "^4.0.0",
     "spryker/money": "^2.0.0",
-    "spryker/oms": "^7.0.0 || ^8.0.0 || ^10.0.0",
-    "spryker/payment": "^4.0.0",
+    "spryker/oms": "^7.0.0 || ^8.0.0 || ^10.0.0 || ^11.0.0",
+    "spryker/payment": "^4.0.0 || ^5.0.0",
     "spryker/propel-orm": "^1.0.0",
     "spryker/refund": "^5.0.0",
-    "spryker/sales": "^8.0.0 || ^10.0.0",
+    "spryker/sales": "^8.0.0 || ^10.0.0 || ^11.2.0",
     "spryker/session": "^3.0.0 || ^4.0.0",
     "spryker/step-engine": "^3.1.0",
     "spryker/symfony": "^3.0.0",
