--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "Payolution module",
   "license": "MIT",
   "require": {
+    "php": ">=7.2",
     "spryker/checkout": "^3.0.0 || ^4.0.0 || ^6.0.0",
     "spryker/glossary": "^3.0.0",
     "spryker/gui": "^3.0.0",
