--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,10 @@
       "SprykerEcoTest\\Zed\\Payolution\\Business\\": "tests/SprykerEcoTest/Zed/Payolution/Business/"
     }
   },
+  "scripts": {
+    "cs-check": "phpcs --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml -p src/ tests/",
+    "cs-fix": "phpcbf --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml -p src/ tests/"
+  },
   "autoload-dev": {
     "psr-4": {
       "SprykerEcoTest\\": "tests/SprykerEcoTest/"
